--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -45,6 +45,14 @@
 			"cozy": true
 		},
 
+    "resources": {
+      "css": [
+        {
+          "uri": "css/style.css"
+        }
+      ]
+    },
+
 		"models": {
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
